<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.login.LoginFragment">

        <TextView
            android:id="@+id/form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:text="@string/ask_for_help"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/form_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/form_subtitle"
            app:layout_constraintStart_toStartOf="@+id/form_title"
            app:layout_constraintTop_toBottomOf="@+id/form_title" />

        <com.c22ps099.relasiahelpseekerapp.view.editText.EditTextWithValidation
            android:id="@+id/et_form_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:drawableStart="@drawable/ic_baseline_format_list_bulleted_24"
            android:drawablePadding="4dp"
            android:hint="@string/name_kegiatan_hint"
            android:minHeight="48dp"
            android:transitionName="email_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/form_title"
            app:layout_constraintTop_toBottomOf="@+id/form_subtitle"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <com.c22ps099.relasiahelpseekerapp.view.editText.EditTextWithValidation
            android:id="@+id/et_form_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_baseline_place_24"
            android:drawablePadding="4dp"
            android:hint="@string/location_hint"
            android:minHeight="48dp"
            android:transitionName="email_input"
            app:layout_constraintEnd_toEndOf="@+id/et_form_activity"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_form_activity"
            app:layout_constraintTop_toBottomOf="@+id/et_form_activity"
            tools:ignore="TextContrastCheck,TextContrastCheck" />


        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/sp_form_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_baseline_location_city_24"
            android:drawablePadding="4dp"
            android:minHeight="48dp"
            android:paddingTop="4dp"
            android:transitionName="email_input"
            app:layout_constraintEnd_toEndOf="@+id/et_form_activity"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_form_activity"
            app:layout_constraintTop_toBottomOf="@+id/sp_form_province"
            app:smsp_hint="Select one City"
            tools:ignore="TextContrastCheck,TextContrastCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/sp_form_province"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_baseline_home_work_24"
            android:drawablePadding="4dp"
            android:hint="@string/province_hint"
            android:minHeight="48dp"
            android:paddingTop="4dp"
            android:transitionName="email_input"
            app:layout_constraintEnd_toEndOf="@+id/et_form_activity"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_form_activity"
            app:layout_constraintTop_toBottomOf="@+id/et_form_location"
            app:smsp_hint="Select one Province"
            tools:ignore="TextContrastCheck,TextContrastCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <com.c22ps099.relasiahelpseekerapp.view.editText.EditTextWithValidation
            android:id="@+id/et_form_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_baseline_people_alt_24"
            android:drawablePadding="4dp"
            android:hint="@string/amount_hint"
            android:minHeight="48dp"
            android:transitionName="email_input"
            app:layout_constraintEnd_toEndOf="@+id/et_form_activity"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_form_activity"
            app:layout_constraintTop_toBottomOf="@+id/sp_form_city"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <com.c22ps099.relasiahelpseekerapp.view.editText.EditTextWithValidation
            android:id="@+id/et_form_date_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_baseline_date_range_24"
            android:drawablePadding="4dp"
            android:hint="@string/date_start_hint"
            android:minHeight="48dp"
            android:transitionName="email_input"
            app:layout_constraintEnd_toEndOf="@+id/et_form_activity"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_form_activity"
            app:layout_constraintTop_toBottomOf="@+id/et_form_amount"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <com.c22ps099.relasiahelpseekerapp.view.editText.EditTextWithValidation
            android:id="@+id/et_form_date_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_baseline_date_range_24"
            android:drawablePadding="4dp"
            android:hint="@string/date_end_hint"
            android:minHeight="48dp"
            android:transitionName="email_input"
            app:layout_constraintEnd_toEndOf="@+id/et_form_activity"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_form_activity"
            app:layout_constraintTop_toBottomOf="@+id/et_form_date_start"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/sp_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_baseline_home_work_24"
            android:drawablePadding="4dp"
            android:hint="@string/province_hint"
            android:minHeight="48dp"
            android:paddingTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/et_form_date_end"
            app:layout_constraintStart_toStartOf="@+id/et_form_date_end"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload_image"
            app:smsp_hint="Select one Category"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_shape"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:transitionName="action_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_notes"
            app:layout_constraintStart_toStartOf="@+id/et_notes"
            app:layout_constraintTop_toBottomOf="@+id/et_notes"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btn_upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_baseline_insert_photo_24"
            android:drawableLeft="@drawable/ic_baseline_insert_photo_24"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/upload_image_file"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/et_form_date_end"
            app:layout_constraintTop_toBottomOf="@+id/et_form_date_end" />

        <TextView
            android:id="@+id/tv_upload_images"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Choose max. 3 images"
            app:layout_constraintBottom_toBottomOf="@+id/btn_upload_image"
            app:layout_constraintEnd_toEndOf="@+id/et_form_date_end"
            app:layout_constraintStart_toEndOf="@+id/btn_upload_image"
            app:layout_constraintTop_toTopOf="@+id/btn_upload_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/notes"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/et_requirement"
            app:layout_constraintStart_toStartOf="@+id/et_requirement"
            app:layout_constraintTop_toBottomOf="@id/et_requirement" />

        <EditText
            android:id="@+id/et_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="top|left"
            android:hint="@string/notes_hint"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_notes"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_title_notes"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_notes"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_requirements"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/requirements"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/sp_categories"
            app:layout_constraintStart_toStartOf="@+id/sp_categories"
            app:layout_constraintTop_toBottomOf="@+id/sp_categories" />

        <EditText
            android:id="@+id/et_requirement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="top|left"
            android:hint="@string/requirements_hint"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_requirements"
            app:layout_constraintStart_toStartOf="@+id/tv_title_requirements"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_requirements"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

