<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.FormDataVolunteer">


    <EditText
        android:id="@+id/et_detail_loc2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="top|left"
        android:hint="@string/address_hint"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="3"
        android:padding="8dp"

        android:scrollbars="vertical"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/sp_vol_instantion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sp_vol_instantion"
        app:layout_constraintTop_toBottomOf="@+id/sp_vol_instantion"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <com.c22ps099.relasiahelpseekerapp.view.editText.EditTextWithValidation
        android:id="@+id/et_form_activity2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_attach_file"
        android:drawablePadding="4dp"
        android:hint="@string/file_hint"
        android:minHeight="48dp"
        android:transitionName="email_input"
        app:layout_constraintEnd_toEndOf="@+id/et_detail_loc2"
        app:layout_constraintStart_toStartOf="@+id/et_detail_loc2"
        app:layout_constraintTop_toBottomOf="@+id/et_detail_loc2"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_title_volunteer_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/form_volunteer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle_form_volunteer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/form_volunteer_subtitle"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_title_volunteer_data"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_volunteer_data" />

    <TextView
        android:id="@+id/tv_subtitle_form_volunteer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/form_volunteer_subtitle2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/sp_vol_categories3"
        app:layout_constraintTop_toBottomOf="@+id/sp_vol_categories3" />

    <Spinner
        android:id="@+id/sp_vol_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_form_volunteer"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/sp_vol_instantion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_form_volunteer2"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/sp_vol_categories2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_vol_categories"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/sp_vol_categories3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_vol_categories2"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_sk_description"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="@string/sk_description"
        app:layout_constraintEnd_toEndOf="@+id/et_form_activity2"
        app:layout_constraintStart_toStartOf="@+id/et_form_activity2"
        app:layout_constraintTop_toBottomOf="@+id/et_form_activity2" />

</androidx.constraintlayout.widget.ConstraintLayout>